Feature/tracefoss 1331 discovery service (#168)
* chore: TRACEFOSS-1331 combined result of discovery service and fallback urls.
* chore: TRACEFOSS-1331 removed service annotation.